--- a/index.html
+++ b/index.html
@@ -1,117 +1,163 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HomeC</title>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
+<title>HomeC</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#007bff">
 
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyA9Wtvvo1idJB2lXCfwBckgk2hrDbSXOfI",
-      authDomain: "homec-e6227.firebaseapp.com",
-      databaseURL: "https://homec-e6227-default-rtdb.firebaseio.com",
-      projectId: "homec-e6227",
-      storageBucket: "homec-e6227.firebasestorage.app",
-      messagingSenderId: "55229004317",
-      appId: "1:55229004317:web:9495e508539d364f68e4f4",
-      measurementId: "G-GZG6QRLTXL"
-    };
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyA9Wtvvo1idJB2lXCfwBckgk2hrDbSXOfI",
+  authDomain: "homec-e6227.firebaseapp.com",
+  databaseURL: "https://homec-e6227-default-rtdb.firebaseio.com",
+  projectId: "homec-e6227",
+  storageBucket: "homec-e6227.firebasestorage.app",
+  messagingSenderId: "55229004317",
+  appId: "1:55229004317:web:9495e508539d364f68e4f4"
+};
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-  </script>
+firebase.initializeApp(firebaseConfig);
+const db=firebase.database();
+</script>
 
-  <style>
-    body { font-family: Arial; margin:0; }
-    .header { padding:15px; font-size:20px; font-weight:bold; border-bottom:1px solid #ccc; }
-    #chatBox { height:60vh; overflow-y:auto; padding:10px; }
-    .msg { margin:5px 0; padding:8px 12px; border-radius:15px; max-width:60%; }
-    .sent { background:#007bff; color:white; margin-left:auto; }
-    .received { background:#eee; }
-    .inputArea { display:flex; padding:10px; border-top:1px solid #ccc; }
-    .inputArea input { flex:1; padding:8px; }
-    .inputArea button { padding:8px 12px; }
-  </style>
+<style>
+body{
+margin:0;
+font-family:-apple-system,BlinkMacSystemFont,sans-serif;
+height:100vh;
+display:flex;
+flex-direction:column;
+background:white;
+}
+
+.header{
+padding:18px;
+font-size:20px;
+font-weight:bold;
+border-bottom:1px solid #eee;
+}
+
+#chatBox{
+flex:1;
+overflow-y:auto;
+padding:15px;
+display:flex;
+flex-direction:column;
+background:#f9f9f9;
+}
+
+.msg{
+padding:10px 14px;
+border-radius:18px;
+margin-bottom:8px;
+max-width:70%;
+word-wrap:break-word;
+}
+
+.sent{
+background:#007bff;
+color:white;
+align-self:flex-end;
+border-bottom-right-radius:5px;
+}
+
+.received{
+background:#e5e5ea;
+align-self:flex-start;
+border-bottom-left-radius:5px;
+}
+
+.inputArea{
+display:flex;
+padding:10px;
+border-top:1px solid #eee;
+}
+
+.inputArea input{
+flex:1;
+padding:12px;
+border-radius:20px;
+border:1px solid #ccc;
+}
+
+.inputArea button{
+margin-left:8px;
+padding:10px 16px;
+border:none;
+border-radius:20px;
+background:#007bff;
+color:white;
+}
+</style>
 </head>
 
 <body>
 
-<div class="header">HomeC Chat</div>
+<div class="header">HomeC</div>
 
-<div>
-  Chat with:
-  <input type="text" id="chatUser" placeholder="Enter username">
-  <button onclick="startChat()">Start</button>
+<div style="padding:10px;">
+Chat with:
+<input id="chatUser" placeholder="Username">
+<button onclick="startChat()">Start</button>
 </div>
 
 <div id="chatBox"></div>
 
 <div class="inputArea">
-  <input type="text" id="messageInput" placeholder="Type message">
-  <button onclick="sendMessage()">Send</button>
+<input id="messageInput" placeholder="Type message">
+<button onclick="sendMessage()">Send</button>
 </div>
 
 <script>
+let currentUser=localStorage.getItem("loggedInUser");
+let chattingWith=null;
 
-let currentUser = localStorage.getItem("loggedInUser");
-let chattingWith = null;
-
-if(!currentUser){
-  window.location.href = "auth.html";
-}
+if(!currentUser){location.href="auth.html";}
 
 function startChat(){
-  chattingWith = document.getElementById("chatUser").value;
-  if(chattingWith === ""){
-    alert("Enter username");
-    return;
-  }
-
-  listenForMessages();
+chattingWith=chatUser.value;
+listen();
 }
 
 function sendMessage(){
-  const text = document.getElementById("messageInput").value.trim();
-  if(text === "" || !chattingWith) return;
+let text=messageInput.value.trim();
+if(!text||!chattingWith)return;
 
-  const key = [currentUser, chattingWith].sort().join("_");
+let key=[currentUser,chattingWith].sort().join("_");
 
-  db.ref("chats/" + key).push({
-    sender: currentUser,
-    text: text,
-    time: Date.now()
-  });
+db.ref("chats/"+key).push({
+sender:currentUser,
+text:text,
+time:Date.now()
+});
 
-  document.getElementById("messageInput").value = "";
+messageInput.value="";
 }
 
-function listenForMessages(){
-  const key = [currentUser, chattingWith].sort().join("_");
+function listen(){
+let key=[currentUser,chattingWith].sort().join("_");
 
-  db.ref("chats/" + key).on("value", snapshot=>{
-    const chatBox = document.getElementById("chatBox");
-    chatBox.innerHTML = "";
-
-    snapshot.forEach(msg=>{
-      const div = document.createElement("div");
-      div.classList.add("msg");
-
-      if(msg.val().sender === currentUser){
-        div.classList.add("sent");
-      } else {
-        div.classList.add("received");
-      }
-
-      div.innerText = msg.val().text;
-      chatBox.appendChild(div);
-    });
-
-    chatBox.scrollTop = chatBox.scrollHeight;
-  });
+db.ref("chats/"+key).on("value",snap=>{
+chatBox.innerHTML="";
+snap.forEach(m=>{
+let d=document.createElement("div");
+d.classList.add("msg");
+d.classList.add(m.val().sender===currentUser?"sent":"received");
+d.innerText=m.val().text;
+chatBox.appendChild(d);
+});
+chatBox.scrollTop=chatBox.scrollHeight;
+});
 }
 
+if("serviceWorker" in navigator){
+navigator.serviceWorker.register("service-worker.js");
+}
 </script>
 
 </body>
