--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <meta charset="UTF-8">
 <title>HomeC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#007bff">
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -22,7 +20,7 @@ const firebaseConfig = {
 };
 
 firebase.initializeApp(firebaseConfig);
-const db=firebase.database();
+const db = firebase.database();
 </script>
 
 <style>
@@ -32,14 +30,80 @@ font-family:-apple-system,BlinkMacSystemFont,sans-serif;
 height:100vh;
 display:flex;
 flex-direction:column;
-background:white;
+background:#ffffff;
 }
 
 .header{
 padding:18px;
-font-size:20px;
+font-size:22px;
 font-weight:bold;
+}
+
+.topLine{
+display:flex;
+justify-content:flex-end;
+align-items:center;
+border-bottom:1px solid #ddd;
+padding:12px 18px;
+}
+
+.iconBtn{
+margin-left:18px;
+font-size:22px;
+cursor:pointer;
+}
+
+.sectionTitle{
+padding:15px 18px;
+font-size:17px;
+font-weight:bold;
+color:#444;
+}
+
+#contactList{
+flex:1;
+overflow-y:auto;
+}
+
+.contact{
+padding:15px 18px;
 border-bottom:1px solid #eee;
+cursor:pointer;
+transition:0.2s;
+}
+
+.contact:hover{
+background:#f5f5f5;
+}
+
+.contactName{
+font-weight:bold;
+}
+
+.contactLast{
+font-size:13px;
+color:gray;
+margin-top:4px;
+}
+
+#chatScreen{
+display:none;
+flex-direction:column;
+height:100%;
+}
+
+.chatHeader{
+display:flex;
+align-items:center;
+padding:12px 15px;
+border-bottom:1px solid #ddd;
+font-weight:bold;
+}
+
+.backBtn{
+margin-right:15px;
+cursor:pointer;
+font-size:18px;
 }
 
 #chatBox{
@@ -48,7 +112,7 @@ overflow-y:auto;
 padding:15px;
 display:flex;
 flex-direction:column;
-background:#f9f9f9;
+background:#f7f7f7;
 }
 
 .msg{
@@ -56,26 +120,33 @@ padding:10px 14px;
 border-radius:18px;
 margin-bottom:8px;
 max-width:70%;
-word-wrap:break-word;
+font-size:14px;
+display:flex;
+flex-direction:column;
 }
 
 .sent{
 background:#007bff;
 color:white;
 align-self:flex-end;
-border-bottom-right-radius:5px;
 }
 
 .received{
 background:#e5e5ea;
 align-self:flex-start;
-border-bottom-left-radius:5px;
+}
+
+.msgTime{
+font-size:11px;
+margin-top:4px;
+opacity:0.7;
 }
 
 .inputArea{
 display:flex;
-padding:10px;
-border-top:1px solid #eee;
+padding:12px;
+border-top:1px solid #ddd;
+background:white;
 }
 
 .inputArea input{
@@ -100,10 +171,19 @@ color:white;
 
 <div class="header">HomeC</div>
 
-<div style="padding:10px;">
-Chat with:
-<input id="chatUser" placeholder="Username">
-<button onclick="startChat()">Start</button>
+<div class="topLine">
+<span class="iconBtn" onclick="addContact()">➕</span>
+</div>
+
+<div class="sectionTitle">Contacts</div>
+
+<div id="contactList"></div>
+
+<div id="chatScreen">
+
+<div class="chatHeader">
+<span class="backBtn" onclick="backToList()">⬅</span>
+<span id="chatUser"></span>
 </div>
 
 <div id="chatBox"></div>
@@ -113,27 +193,79 @@ Chat with:
 <button onclick="sendMessage()">Send</button>
 </div>
 
+</div>
+
 <script>
-let currentUser=localStorage.getItem("loggedInUser");
+let currentUser = localStorage.getItem("loggedInUser");
+if(!currentUser){ location.href="auth.html"; }
+
+function addContact(){
+let user = prompt("Enter username:");
+if(!user) return;
+
+db.ref("contacts/"+currentUser+"/"+user).set(true);
+db.ref("contacts/"+user+"/"+currentUser).set(true);
+}
+
+function loadContacts(){
+db.ref("contacts/"+currentUser).on("value",snap=>{
+contactList.innerHTML="";
+snap.forEach(c=>{
+let name=c.key;
+
+let div=document.createElement("div");
+div.className="contact";
+div.onclick=()=>openChat(name);
+
+let nameDiv=document.createElement("div");
+nameDiv.className="contactName";
+nameDiv.innerText=name;
+
+let lastDiv=document.createElement("div");
+lastDiv.className="contactLast";
+
+let key=[currentUser,name].sort().join("_");
+
+db.ref("chats/"+key).limitToLast(1).on("value",m=>{
+m.forEach(msg=>{
+lastDiv.innerText=msg.val().text;
+});
+});
+
+div.appendChild(nameDiv);
+div.appendChild(lastDiv);
+contactList.appendChild(div);
+});
+});
+}
+
 let chattingWith=null;
 
-if(!currentUser){location.href="auth.html";}
-
-function startChat(){
-chattingWith=chatUser.value;
+function openChat(user){
+chattingWith=user;
+chatUser.innerText=user;
+document.querySelector(".sectionTitle").style.display="none";
+contactList.style.display="none";
+chatScreen.style.display="flex";
 listen();
 }
 
+function backToList(){
+chatScreen.style.display="none";
+contactList.style.display="block";
+document.querySelector(".sectionTitle").style.display="block";
+}
+
 function sendMessage(){
-let text=messageInput.value.trim();
-if(!text||!chattingWith)return;
+let text = messageInput.value.trim();
+if(!text) return;
 
 let key=[currentUser,chattingWith].sort().join("_");
 
 db.ref("chats/"+key).push({
 sender:currentUser,
 text:text,
-time:Date.now()
+time: Date.now()
 });
 
 messageInput.value="";
@@ -144,20 +276,41 @@ let key=[currentUser,chattingWith].sort().join("_");
 
 db.ref("chats/"+key).on("value",snap=>{
 chatBox.innerHTML="";
+
 snap.forEach(m=>{
+let data=m.val();
+
 let d=document.createElement("div");
 d.classList.add("msg");
-d.classList.add(m.val().sender===currentUser?"sent":"received");
-d.innerText=m.val().text;
+d.classList.add(data.sender===currentUser?"sent":"received");
+
+let textDiv=document.createElement("div");
+textDiv.innerText=data.text;
+
+let timeDiv=document.createElement("div");
+timeDiv.className="msgTime";
+
+let date=new Date(data.time);
+let hours=date.getHours();
+let minutes=date.getMinutes();
+let ampm=hours>=12?"PM":"AM";
+hours=hours%12;
+hours=hours?hours:12;
+minutes=minutes<10?"0"+minutes:minutes;
+
+timeDiv.innerText=hours+":"+minutes+" "+ampm;
+
+d.appendChild(textDiv);
+d.appendChild(timeDiv);
+
 chatBox.appendChild(d);
 });
+
 chatBox.scrollTop=chatBox.scrollHeight;
 });
 }
 
-if("serviceWorker" in navigator){
-navigator.serviceWorker.register("service-worker.js");
-}
+loadContacts();
 </script>
 
 </body>
