--- a/auth.html
+++ b/auth.html
@@ -4,8 +4,6 @@
 <meta charset="UTF-8">
 <title>HomeC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#007bff">
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -27,46 +25,43 @@ const db = firebase.database();
 
 <style>
 body{
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-  background:#f5f7fa;
+margin:0;
+font-family:-apple-system,BlinkMacSystemFont,sans-serif;
+height:100vh;
+display:flex;
+justify-content:center;
+align-items:center;
+background:#f2f2f2;
 }
 
 .card{
-  background:white;
-  padding:30px;
-  width:90%;
-  max-width:350px;
-  border-radius:15px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.1);
+background:white;
+padding:30px;
+width:90%;
+max-width:350px;
+border-radius:20px;
+box-shadow:0 15px 30px rgba(0,0,0,0.1);
 }
 
-h2{
-  text-align:center;
-  margin-bottom:20px;
-}
+h2{text-align:center;margin-bottom:20px;}
 
 input{
-  width:100%;
-  padding:12px;
-  margin:8px 0;
-  border-radius:10px;
-  border:1px solid #ccc;
+width:100%;
+padding:12px;
+margin:8px 0;
+border-radius:12px;
+border:1px solid #ccc;
 }
 
 button{
-  width:100%;
-  padding:12px;
-  margin-top:10px;
-  border:none;
-  border-radius:10px;
-  background:#007bff;
-  color:white;
-  font-weight:bold;
+width:100%;
+padding:12px;
+margin-top:10px;
+border:none;
+border-radius:12px;
+background:#007bff;
+color:white;
+font-weight:bold;
 }
 </style>
 </head>
@@ -76,20 +71,23 @@ button{
 <div class="card">
 <h2>HomeC</h2>
 
-<h4>Register</h4>
-<input id="regUser" placeholder="Username">
-<input id="regPass" type="password" placeholder="Password">
+<input id="regUser" placeholder="New Username">
+<input id="regPass" type="password" placeholder="New Password">
 <button onclick="register()">Register</button>
 
 <hr>
 
-<h4>Login</h4>
 <input id="logUser" placeholder="Username">
 <input id="logPass" type="password" placeholder="Password">
 <button onclick="login()">Login</button>
 </div>
 
 <script>
+let currentUser = localStorage.getItem("loggedInUser");
+if(currentUser){
+location.href="index.html";
+}
+
 function register(){
 let u=regUser.value;
 let p=regPass.value;
@@ -97,7 +95,10 @@ if(!u||!p){alert("Fill all fields");return;}
 
 db.ref("users/"+u).get().then(s=>{
 if(s.exists()){alert("Username exists");return;}
-db.ref("users/"+u).set({password:p});
+db.ref("users/"+u).set({
+password:p,
+online:false
+});
 alert("Account created!");
 });
 }
@@ -110,13 +111,11 @@ db.ref("users/"+u).get().then(s=>{
 if(!s.exists()||s.val().password!==p){
 alert("Invalid login");return;
 }
+
 localStorage.setItem("loggedInUser",u);
+db.ref("users/"+u+"/online").set(true);
 location.href="index.html";
 });
-}
-
-if("serviceWorker" in navigator){
-navigator.serviceWorker.register("service-worker.js");
 }
 </script>
 
